fix #1215785 do not enable Deploy button if missing required fields and show validation messages on Review tab

--- a/fusor-ember-cli/app/styles/custom.scss
+++ b/fusor-ember-cli/app/styles/custom.scss
@@ -436,6 +436,18 @@ label.env_path_active:after {
   color: red;
 }
 
+.errorForValidation a {
+  color: red;
+}
+
+.defaultValue {
+  color: #999;
+}
+
+.defaultValue a {
+  color: #999;
+}
+
 .deployment_name {
   display: inline;
 }
