--- a/fusor-ember-cli/app/templates/subscriptions.hbs
+++ b/fusor-ember-cli/app/templates/subscriptions.hbs
@@ -1,3 +1,6 @@
+{{aaa}}
+{{controller.aaa}}
+{{controller.stepNumberSubscriptions}}
 <div class="row tabbed_side_nav_form">
 
   <ul class="nav nav-pills nav-stacked col-md-3">
