--- a/fusor-ember-cli/app/templates/subscriptions/credentials.hbs
+++ b/fusor-ember-cli/app/templates/subscriptions/credentials.hbs
@@ -1,3 +1,15 @@
+{{#if showErrorMessage}}
+  <div class="row">
+    <div class='col-md-9'>
+      <div class='alert alert-danger'>
+          <i class="fa fa-2x fa-exclamation-triangle errorForValidation"></i>
+          &nbsp;
+          {{errorMsg}}
+      </div>
+    </div>
+  </div>
+{{/if}}
+
 Enter your Red Hat account information.
 
 <div class='row'>
@@ -18,10 +30,8 @@ Enter your Red Hat account information.
 
     <br />
     <br />
-    <div style='float:right'>
-      <button {{action 'showModal' 'cancelDeploymentModal'}} class='btn btn-default'>Cancel</button>
-      {{#link-to 'subscriptions.select-subscriptions' class='btn btn-primary' disabled=disableCredentialsNext}}Next{{/link-to}}
+    <div class='pull-right'>
+      <br />
+      {{button-f disabled=disableCredentialsNext title=buttonLoginTitle action="loginCredentials"}}
     </div>
-
-
 
