--- a/fusor-ember-cli/app/templates/subscriptions.hbs
+++ b/fusor-ember-cli/app/templates/subscriptions.hbs
@@ -4,7 +4,7 @@
       {{#link-to 'subscriptions.credentials' tagName='li'}}
         <a>{{stepNumberSubscriptions}}A. Enter Credentials</a>
       {{/link-to}}
-      {{#link-to 'subscriptions.select-subscriptions' tagName='li' disabled=disableTabManagementApplication}}
+      {{#link-to 'subscriptions.management-application' tagName='li' disabled=disableTabManagementApplication}}
         <a>{{stepNumberSubscriptions}}B. Select Subscription Management Application</a>
       {{/link-to}}
       {{#link-to 'subscriptions.select-subscriptions' tagName='li' disabled=disableTabSelectSubsciptions}}
