squash this commit

--- a/fusor-ember-cli/app/templates/subscriptions/credentials.hbs
+++ b/fusor-ember-cli/app/templates/subscriptions/credentials.hbs
@@ -10,28 +10,33 @@
   </div>
 {{/if}}
 
-Enter your Red Hat account information.
+{{#if session.isAuthenticated}}
+  <a {{ action 'invalidateSession' }}>Logout</a>
+{{else}}
 
-<div class='row'>
-  <div class='col-md-12'>
-    <br />
-    <form class="form form-horizontal">
-      {{text-f label="Red Hat login" value=username}}
-      {{text-f label="Password" value=password type='password'}}
+  Enter your Red Hat account information.
 
-        {{#base-f}}
-          <a href='https://www.redhat.com/wapps/sso/lostPassword.html' target='_blank'>
-            Forgot your login or password?
-          </a>
-        {{/base-f}}
-    </form>
+  <div class='row'>
+    <div class='col-md-12'>
+      <br />
+      <form class="form form-horizontal">
+        {{text-f label="Red Hat login" value=username}}
+        {{text-f label="Password" value=password type='password'}}
+
+          {{#base-f}}
+            <a href='https://www.redhat.com/wapps/sso/lostPassword.html' target='_blank'>
+              Forgot your login or password?
+            </a>
+          {{/base-f}}
+      </form>
+    </div>
   </div>
-</div>
 
     <br />
     <br />
     <div class='pull-right'>
       <br />
-      {{button-f disabled=disableCredentialsNext title=buttonLoginTitle action="loginCredentials"}}
+      {{button-f disabled=disableCredentialsNext title=buttonLoginTitle action="authenticate"}}
     </div>
 
+{{/if}}
