squash this commit

--- a/fusor-ember-cli/app/templates/subscriptions/credentials.hbs
+++ b/fusor-ember-cli/app/templates/subscriptions/credentials.hbs
@@ -20,7 +20,7 @@
     <div class='col-md-12'>
       <br />
       <form class="form form-horizontal">
-        {{text-f label="Red Hat login" value=username}}
+        {{text-f label="Red Hat login" value=identification}}
         {{text-f label="Password" value=password type='password'}}
 
           {{#base-f}}
