Use base-f based form input components

--- a/fusor-ember-cli/app/styles/custom.scss
+++ b/fusor-ember-cli/app/styles/custom.scss
@@ -288,6 +288,15 @@ table.fusor-table {
   padding-left: 15px !important;
 }
 
+.input-units-label {
+  padding-left: 0px !important;
+  margin-left: -10px !important;
+}
+
+.form-label-nowrap {
+  white-space:nowrap;
+}
+
 .rhci-review-product-name {
   white-space: nowrap;
 }
