--- a/fusor-ember-cli/app/templates/components/file-upload-form.hbs
+++ b/fusor-ember-cli/app/templates/components/file-upload-form.hbs
@@ -1,9 +1,9 @@
 <form id="{{formId}}">
     <div class="form-group required">
-        <input id="{{fileChooserButtonId}}" name="{{fileChooserButtonName}}" value=selectedFile type="file" accept={{acceptValue}} {{action "fileChosen" on="change"}}>
+        <input id="{{inputId}}" value=selectedFile type="file" accept={{acceptValue}} {{action "fileChosen" on="change"}}>
     </div>
     <div class="form-group">
-        <button type="button" class="btn btn-sm btn-default">Cancel</button>
+        <button type="button" class="btn btn-sm btn-default" {{action "doCancel"}}>Cancel</button>
         <button type="button" class="btn btn-sm btn-primary" {{action "doUpload"}}>{{uploadButtonTitle}}</button>
     </div>
 </form>
