--- a/fusor-ember-cli/app/templates/components/rhci-start.hbs
+++ b/fusor-ember-cli/app/templates/components/rhci-start.hbs
@@ -16,7 +16,7 @@
   </div>
 
   <div class='col-md-4'>
-    {{rhci-item srcImage=imgOpenStack isChecked=isOpenStack name=nameOpenStack cssId='is_openstack' isDisabled=true}}
+    {{rchi-item srcImage=imgOpenStack isChecked=isOpenStack name=nameOpenStack cssId='is_openstack'}}
   </div>
 
   <div class='col-md-4'>
