--- a/fusor-ember-cli/app/templates/review/progress/overview.hbs
+++ b/fusor-ember-cli/app/templates/review/progress/overview.hbs
@@ -24,14 +24,8 @@
   </div>
   <div class='col-md-8'>
     <div class='progress-bar-label'>
-      {{#if isFinished}}
-        <i class="fa fa-check-circle-o green-circle"></i>&nbsp;
-      {{else if isError}}
-        <i class="fa fa-exclamation-triangle errorForValidation"></i>&nbsp;
-      {{else}}
-        <div class="spinner spinner-xs spinner-inline"></div>
-      {{/if}}
-      {{progressBarMsg}}<span class='no-bold'>{{controller.progressBarSubMsg}}</span> {{!model.humanized_errors !!!temporary commented this out}}
+      {{fa-icon "spinner" spin=isSpin}}
+      &nbsp;{{progressBarMsg}}: <span class='no-bold'>{{controller.progressBarSubMsg}}</span> {{model.humanized_errors}} {{model.humanized_errors}}
       <div class='pull-right'>
         {{controller.percentProgress}}%
       </div>
