--- a/fusor-ember-cli/app/templates/deployment.hbs
+++ b/fusor-ember-cli/app/templates/deployment.hbs
@@ -27,6 +27,6 @@
 </div>
 {{/unless}}
 
-<div class="row parent-sidebar-pf">
+<div class="row row-eq-height parent-sidebar-pf rhci-parent-sidebar">
  {{outlet}}
 </div>
