Add flavor adapter/controller/model
also updates register-nodes to use flavor model

--- a/fusor-ember-cli/app/templates/components/node-profile.hbs
+++ b/fusor-ember-cli/app/templates/components/node-profile.hbs
@@ -17,7 +17,7 @@
                     <tbody>
                       <tr>
                           <th>CPU</th>
-                          <td>{{profile.cpu}}</td>
+                          <td>{{profile.vcpus}}</td>
                       </tr>
                       <tr>
                           <th>RAM</th>
