--- a/fusor-ember-cli/app/styles/openstack.scss
+++ b/fusor-ember-cli/app/styles/openstack.scss
@@ -22,6 +22,8 @@
   padding-left: 12px;
   padding-top: 10px;
   display: inline-block;
+  min-width: 660px;
+  min-height: 60px;
 }
 .deployment-roles.deployment-roles-unassigned.deployment-roles-active {
   border-color: #7b7b7b;
