Add deployment plan to fusor-ember-cli
this change includes updates required to make
the plan -> roles relationship work

--- a/fusor-ember-cli/app/templates/assign-nodes.hbs
+++ b/fusor-ember-cli/app/templates/assign-nodes.hbs
@@ -3,7 +3,7 @@
         <h2>Available Deployment Roles</h2>
         {{#draggable-object-target action="unassignRole"}}
             <div class="row deployment-roles deployment-roles-unassigned deployment-roles-assignable {{droppableClass}}">
-              {{#each role in availableRoles}}
+              {{#each role in model.plan.roles}}
                 {{#draggable-object content=role}}
                   {{deployment-role role=role edit="editRole"}}
                 {{/draggable-object}}
