--- a/fusor-ember-cli/app/templates/assign-nodes.hbs
+++ b/fusor-ember-cli/app/templates/assign-nodes.hbs
@@ -23,7 +23,11 @@
         {{#each profile in profiles}}
             <div class="row">
                 <div class='col-md-7'>
-                  {{node-profile profile=profile plan=model doAssign=true assignRole="assignRole" assignRoleType="assignRoleType" unassignRole="unassignRole" editRole="editRole"}}
+                  {{#if nodes}}
+                    {{node-profile profile=profile nodes=nodes plan=model doAssign=true assignRole="assignRole" assignRoleType="assignRoleType" unassignRole="unassignRole" editRole="editRole"}}
+                 {{else}}
+                    {{node-profile profile=profile plan=model doAssign=true assignRole="assignRole" assignRoleType="assignRoleType" unassignRole="unassignRole" editRole="editRole"}}
+                 {{/if}}
                 </div>
             </div>
         {{/each}}
