Wording fix, plus allow modal dialog to scroll

--- a/fusor-ember-cli/app/templates/new-node-registration.hbs
+++ b/fusor-ember-cli/app/templates/new-node-registration.hbs
@@ -1,4 +1,4 @@
-{{#em-modal-form configName="bs" id="nodeRegistrationModal" on-submit="registerNodes" open-if=registerNodesModalOpened close-if=registerNodesModalClosed in-async=async}}
+{{#em-modal-form class="scrollable-form" configName="bs" id="nodeRegistrationModal" on-submit="registerNodes" open-if=registerNodesModalOpened close-if=registerNodesModalClosed in-async=async}}
 
     {{#em-modal-title}}
         {{#em-modal-toggler class="close"}}
