--- a/fusor-ember-cli/app/templates/register-nodes.hbs
+++ b/fusor-ember-cli/app/templates/register-nodes.hbs
@@ -37,7 +37,7 @@
     <div class='col-md-5'>
     {{#if noRegisteredNodes}}
       <p>
-        Currently, there are no registered nodes available. You must have at least ??? nodes in order to continue
+        Currently, there are no registered nodes available. You must have at least 3 nodes in order to continue
         this deployment. Use the Register Nodes button below to begin the registration process.
       </p>
     {{else}}
