Enable overcloud role assignment through API
auto-refresh does not yet work, so manual reload is required

--- a/fusor-ember-cli/app/templates/assign-nodes.hbs
+++ b/fusor-ember-cli/app/templates/assign-nodes.hbs
@@ -24,9 +24,9 @@
             <div class="row">
                 <div class='col-md-7'>
                   {{#if nodes}}
-                    {{node-profile profile=profile nodes=nodes plan=model doAssign=true assignRole="assignRole" assignRoleType="assignRoleType" unassignRole="unassignRole" editRole="editRole"}}
+                    {{node-profile profile=profile nodes=nodes plan=model doAssign=true assignRole="assignRole" unassignRole="unassignRole" editRole="editRole"}}
                  {{else}}
-                    {{node-profile profile=profile plan=model doAssign=true assignRole="assignRole" assignRoleType="assignRoleType" unassignRole="unassignRole" editRole="editRole"}}
+                    {{node-profile profile=profile plan=model doAssign=true assignRole="assignRole" unassignRole="unassignRole" editRole="editRole"}}
                  {{/if}}
                 </div>
             </div>
