Enable API call to deploy overcloud

--- a/fusor-ember-cli/app/templates/assign-nodes.hbs
+++ b/fusor-ember-cli/app/templates/assign-nodes.hbs
@@ -44,7 +44,7 @@
           {{#link-to 'register-nodes' class='btn btn-default'}}
               Back
           {{/link-to}}
-            <button {{action 'saveDeployment' nextStepRouteName}}
+            <button {{action 'deployPlan' nextStepRouteName}}
               {{bind-attr disabled=disableAssignNodesNext}}
                     class='btn btn-primary'>
                 Next
